--- a/tracking.html
+++ b/tracking.html
@@ -53,9 +53,12 @@
 
 <div class="container">
 
-<input type="text" id="searchInput" placeholder="Search donor..." onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
+<input type="text" id="searchInput" placeholder="Search donor..."
+onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
+<button class="top-btn" onclick="exportToCSV()">Export CSV</button>
 <button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
+
 <br><br>
 
 <select id="bloodFilter" onchange="renderTable()">
@@ -92,58 +95,45 @@
 
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getFirestore, collection, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
-  authDomain: "galloners-club.firebaseapp.com",
-  projectId: "galloners-club",
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-
-// ---------- LOCAL STORAGE + FIREBASE HYBRID ----------
-let donors = [];
-
-async function loadDonors(){
-    donors = [];
-    const snapshot = await getDocs(collection(db, "donors"));
-    snapshot.forEach(docSnap=>{
-        donors.push({ id: docSnap.id, ...docSnap.data() });
-    });
-    // save to localStorage for edit functionality
-    localStorage.setItem("donors", JSON.stringify(donors));
-    renderTable();
-}
-
+<script>
 function getDonors(){
     let data = localStorage.getItem("donors");
     if(!data) return [];
-    try {
-        return JSON.parse(data);
-    } catch(e){
-        return [];
+    try { return JSON.parse(data); } catch(e){ return []; }
+}
+
+function getCategoryLimits(){
+    let settings = localStorage.getItem("categorySettings");
+    if(!settings){
+        return { galloner: 8, bronze: 28, silver: 46, gold: 70 };
     }
+    return JSON.parse(settings);
 }
 
 function renderTable(category=null){
+    let donors = getDonors();
     let table = document.getElementById("donorTable");
     let selectedBloodType = document.getElementById("bloodFilter").value;
-    let donorsList = getDonors();
+    let limits = getCategoryLimits();
+
     table.innerHTML = "";
 
-    if(donorsList.length === 0){
+    if(donors.length === 0){
         table.innerHTML = `<tr><td colspan="6">No donors found</td></tr>`;
         return;
     }
 
-    donorsList.forEach((donor,index)=>{
+    donors.forEach((donor,index)=>{
         let serialCount = donor.serials ? donor.serials.length : 0;
 
-        if(selectedBloodType !== "" && donor.bloodType !== selectedBloodType) return;
+        if(selectedBloodType && donor.bloodType !== selectedBloodType) return;
+
+        if(category){
+            if(category==="galloner" && serialCount < limits.galloner) return;
+            if(category==="bronze" && serialCount < limits.bronze) return;
+            if(category==="silver" && serialCount < limits.silver) return;
+            if(category==="gold" && serialCount < limits.gold) return;
+        }
 
         table.innerHTML += `
         <tr>
@@ -157,46 +147,51 @@ function renderTable(category=null){
             </td>
             <td>
                 <button class="edit-btn" onclick="editDonor(${index})">Edit</button>
-                <button class="delete-btn" onclick="deleteDonor('${donor.id}')">Delete</button>
+                <button class="delete-btn" onclick="deleteDonor(${index})">Delete</button>
             </td>
         </tr>
         <tr id="serialRow${index}" style="display:none;">
             <td colspan="6">
                 <div class="serial-box" id="serialList${index}"></div>
             </td>
-        </tr>
-        `;
+        </tr>`;
     });
 }
 
-window.toggleSerial = function(index){
+function toggleSerial(index){
+    let donors = getDonors();
     let row = document.getElementById("serialRow"+index);
     let container = document.getElementById("serialList"+index);
 
-    if(row.style.display === "none"){
-        container.innerHTML = "";
-        let donor = getDonors()[index];
-        let serials = donor.serials || [];
-        serials.forEach(s=>{
-            container.innerHTML += `<div>${s.serial} - ${s.date}</div>`;
+    if(row.style.display==="none"){
+        container.innerHTML="";
+        let serials = donors[index].serials || [];
+        serials.forEach((s,i)=>{
+            container.innerHTML += `
+                <div class="serial-item">
+                    <div>
+                        <input type="text" value="${s.serial}" disabled>
+                        <input type="date" value="${s.date}" disabled>
+                    </div>
+                </div>`;
         });
-        row.style.display = "table-row";
+        row.style.display="table-row";
     } else {
-        row.style.display = "none";
+        row.style.display="none";
     }
 }
 
-window.editDonor = function(index){
-    let donor = getDonors()[index];
+function editDonor(index){
     localStorage.setItem("editIndex", index);
-    window.location.href = "donor-entry.html";
+    window.location.href="donor-entry.html";
 }
 
-window.deleteDonor = async function(id){
-    if(confirm("Are you sure you want to delete this donor?")){
-        await deleteDoc(doc(db, "donors", id));
-        loadDonors();
-    }
+function deleteDonor(index){
+    if(!confirm("Are you sure you want to delete this donor?")) return;
+    let donors = getDonors();
+    donors.splice(index,1);
+    localStorage.setItem("donors", JSON.stringify(donors));
+    renderTable();
 }
 
 function filterByCategory(type){ renderTable(type); }
@@ -204,16 +199,29 @@ function filterByCategory(type){ renderTable(type); }
 function searchDonor(){
     let input = document.getElementById("searchInput").value.toLowerCase();
     let rows = document.querySelectorAll("#donorTable tr");
-
     rows.forEach(row=>{
         row.style.display = row.innerText.toLowerCase().includes(input) ? "" : "none";
     });
 }
 
-function goDashboard(){ window.location.href="dashboard.html"; }
+function goDashboard(){ window.location.href = "dashboard.html"; }
 
-loadDonors();
+function exportToCSV(){
+    let donors = getDonors();
+    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact,Serial Count\n";
+    donors.forEach(d=>{
+        csv += `${d.bloodType || ""},${d.rhFactor || ""},${d.firstName || ""},${d.middleName || ""},${d.surname || ""},${d.birthday || ""},${d.contact || ""},${d.serials ? d.serials.length : 0}\n`;
+    });
+    let blob = new Blob([csv], { type: "text/csv" });
+    let url = window.URL.createObjectURL(blob);
+    let a = document.createElement("a");
+    a.href = url;
+    a.download = "donors.csv";
+    a.click();
+    window.URL.revokeObjectURL(url);
+}
 
+window.onload = function(){ renderTable(); };
 </script>
 
 </body>
