--- a/donor-entry.html
+++ b/donor-entry.html
@@ -45,7 +45,8 @@
 
 <hr>
 
-<h3>Serial Records (Unlimited)</h3>
+<h3>Serial Records</h3>
+
 <input type="text" id="serialInput" placeholder="Serial Number">
 <input type="date" id="dateInput">
 <button onclick="addSerial()">Add Serial</button>
@@ -60,105 +61,101 @@
 
 </div>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+
 <script>
-let serials = [];
+  // Firebase Config
+  const firebaseConfig = {
+    apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
+    authDomain: "galloners-club.firebaseapp.com",
+    projectId: "galloners-club",
+    storageBucket: "galloners-club.appspot.com",
+    messagingSenderId: "213049860421",
+    appId: "1:213049860421:web:4156aaa52b945f48711e2c",
+    measurementId: "G-XYXJH9JNXJ"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
 
-function addSerial(){
-    let serial = document.getElementById("serialInput").value.trim();
-    let date = document.getElementById("dateInput").value;
+  let serials = [];
 
-    if(!serial || !date){
-        alert("Enter serial number and date.");
-        return;
-    }
+  function addSerial(){
+      let serial = document.getElementById("serialInput").value;
+      let date = document.getElementById("dateInput").value;
+      if(serial === "" || date === ""){ alert("Enter serial number and date."); return; }
+      serials.push({ serial, date });
+      document.getElementById("serialInput").value = "";
+      document.getElementById("dateInput").value = "";
+      renderSerials();
+  }
 
-    serials.push({ serial, date });
-    document.getElementById("serialInput").value = "";
-    document.getElementById("dateInput").value = "";
+  function renderSerials(){
+      let container = document.getElementById("serialList");
+      container.innerHTML = "";
+      serials.forEach((s,i)=>{
+          container.innerHTML += `<div>${s.serial} - ${s.date} <button onclick="removeSerial(${i})">Remove</button></div>`;
+      });
+  }
 
-    renderSerials();
-}
+  function removeSerial(index){
+      serials.splice(index,1);
+      renderSerials();
+  }
 
-function renderSerials(){
-    let container = document.getElementById("serialList");
-    container.innerHTML = "";
-    serials.forEach((s,i)=>{
-        container.innerHTML += `
-            <div>
-                ${s.serial} - ${s.date} 
-                <button onclick="removeSerial(${i})">Remove</button>
-            </div>
-        `;
-    });
-}
+  async function saveDonor(){
+      try {
+          const snapshot = await database.ref('donors').get();
+          let donors = snapshot.exists() ? snapshot.val() : [];
+          let editIndex = localStorage.getItem("editIndex");
 
-function removeSerial(i){
-    serials.splice(i,1);
-    renderSerials();
-}
+          let donorData = {
+              firstName: document.getElementById("firstName").value,
+              middleName: document.getElementById("middleName").value,
+              surname: document.getElementById("surname").value,
+              bloodType: document.getElementById("bloodType").value,
+              rhFactor: document.getElementById("rhFactor").value,
+              birthday: document.getElementById("birthday").value,
+              contact: document.getElementById("contact").value,
+              serials: serials
+          };
 
-function saveDonor(){
-    let donors = JSON.parse(localStorage.getItem("donors")) || [];
-    let editIndex = localStorage.getItem("editIndex");
+          // Duplicate check
+          let duplicate = donors.find((d, idx) => idx != editIndex && d.firstName === donorData.firstName && d.surname === donorData.surname && d.contact === donorData.contact);
+          if(duplicate){ alert("Duplicate donor detected!"); return; }
 
-    let donorData = {
-        firstName: document.getElementById("firstName").value.trim(),
-        middleName: document.getElementById("middleName").value.trim(),
-        surname: document.getElementById("surname").value.trim(),
-        bloodType: document.getElementById("bloodType").value,
-        rhFactor: document.getElementById("rhFactor").value,
-        birthday: document.getElementById("birthday").value,
-        contact: document.getElementById("contact").value.trim(),
-        serials: serials
-    };
+          if(editIndex !== null){
+              donors[editIndex] = donorData;
+              localStorage.removeItem("editIndex");
+          } else {
+              donors.push(donorData);
+          }
 
-    // Prevent duplicate donor (same name + birthday + contact)
-    let duplicate = donors.some((d,i) => {
-        if(editIndex !== null && i == editIndex) return false; // skip self on edit
-        return d.firstName === donorData.firstName &&
-               d.middleName === donorData.middleName &&
-               d.surname === donorData.surname &&
-               d.birthday === donorData.birthday &&
-               d.contact === donorData.contact;
-    });
+          await database.ref('donors').set(donors);
+          window.location.href = "tracking.html";
+      } catch(e){ console.error(e); }
+  }
 
-    if(duplicate){
-        alert("Donor already exists! Please check the name, birthday, and contact.");
-        return;
-    }
-
-    if(editIndex !== null){
-        donors[editIndex] = donorData;
-        localStorage.removeItem("editIndex");
-    } else {
-        donors.push(donorData);
-    }
-
-    localStorage.setItem("donors", JSON.stringify(donors));
-
-    // Optional: clear serials after save
-    serials = [];
-    window.location.href = "tracking.html";
-}
-
-window.onload = function(){
-    let editIndex = localStorage.getItem("editIndex");
-    if(editIndex !== null){
-        let donors = JSON.parse(localStorage.getItem("donors")) || [];
-        let donor = donors[editIndex];
-
-        document.getElementById("firstName").value = donor.firstName;
-        document.getElementById("middleName").value = donor.middleName;
-        document.getElementById("surname").value = donor.surname;
-        document.getElementById("bloodType").value = donor.bloodType;
-        document.getElementById("rhFactor").value = donor.rhFactor;
-        document.getElementById("birthday").value = donor.birthday;
-        document.getElementById("contact").value = donor.contact;
-
-        serials = donor.serials || [];
-        renderSerials();
-    }
-}
+  window.onload = async function(){
+      let editIndex = localStorage.getItem("editIndex");
+      if(editIndex !== null){
+          try {
+              const snapshot = await database.ref('donors').get();
+              let donors = snapshot.exists() ? snapshot.val() : [];
+              let donor = donors[editIndex];
+              document.getElementById("firstName").value = donor.firstName;
+              document.getElementById("middleName").value = donor.middleName;
+              document.getElementById("surname").value = donor.surname;
+              document.getElementById("bloodType").value = donor.bloodType;
+              document.getElementById("rhFactor").value = donor.rhFactor;
+              document.getElementById("birthday").value = donor.birthday;
+              document.getElementById("contact").value = donor.contact;
+              serials = donor.serials || [];
+              renderSerials();
+          } catch(e){ console.error(e); }
+      }
+  }
 </script>
 
 </body>
