--- a/donor-entry.html
+++ b/donor-entry.html
@@ -3,7 +3,6 @@
 <head>
     <title>Galloners Club - Donor Entry</title>
     <meta charset="UTF-8">
-
     <style>
         body { margin:0; font-family:Arial; background:#f4f4f4; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
@@ -13,7 +12,6 @@
         .serial-box { margin-top:10px; }
     </style>
 </head>
-
 <body>
 
 <header>
@@ -46,11 +44,9 @@
 <hr>
 
 <h3>Serial Records</h3>
-
 <input type="text" id="serialInput" placeholder="Serial Number">
 <input type="date" id="dateInput">
 <button onclick="addSerial()">Add Serial</button>
-
 <div id="serialList" class="serial-box"></div>
 
 <hr>
@@ -66,8 +62,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
 <script>
-  // Firebase Config
-  const firebaseConfig = {
+const firebaseConfig = {
     apiKey: "AIzaSyByh0YJ11ZpbRV7EoDoLnqgFxe1r68efPI",
     authDomain: "galloners-club.firebaseapp.com",
     projectId: "galloners-club",
@@ -75,87 +70,86 @@
     messagingSenderId: "213049860421",
     appId: "1:213049860421:web:4156aaa52b945f48711e2c",
     measurementId: "G-XYXJH9JNXJ"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
+};
+firebase.initializeApp(firebaseConfig);
+const database = firebase.database();
 
-  let serials = [];
+let serials = [];
 
-  function addSerial(){
-      let serial = document.getElementById("serialInput").value;
-      let date = document.getElementById("dateInput").value;
-      if(serial === "" || date === ""){ alert("Enter serial number and date."); return; }
-      serials.push({ serial, date });
-      document.getElementById("serialInput").value = "";
-      document.getElementById("dateInput").value = "";
-      renderSerials();
-  }
+function addSerial(){
+    let serial = document.getElementById("serialInput").value.trim();
+    let date = document.getElementById("dateInput").value;
+    if(!serial || !date){ alert("Enter serial number and date."); return; }
+    serials.push({ serial, date });
+    document.getElementById("serialInput").value = "";
+    document.getElementById("dateInput").value = "";
+    renderSerials();
+}
 
-  function renderSerials(){
-      let container = document.getElementById("serialList");
-      container.innerHTML = "";
-      serials.forEach((s,i)=>{
-          container.innerHTML += `<div>${s.serial} - ${s.date} <button onclick="removeSerial(${i})">Remove</button></div>`;
-      });
-  }
+function renderSerials(){
+    let container = document.getElementById("serialList");
+    container.innerHTML = "";
+    serials.forEach((s,i)=>{
+        container.innerHTML += `<div>${s.serial} - ${s.date} <button onclick="removeSerial(${i})">Remove</button></div>`;
+    });
+}
 
-  function removeSerial(index){
-      serials.splice(index,1);
-      renderSerials();
-  }
+function removeSerial(i){ serials.splice(i,1); renderSerials(); }
 
-  async function saveDonor(){
-      try {
-          const snapshot = await database.ref('donors').get();
-          let donors = snapshot.exists() ? snapshot.val() : [];
-          let editIndex = localStorage.getItem("editIndex");
+async function saveDonor(){
+    const donorData = {
+        firstName: document.getElementById("firstName").value,
+        middleName: document.getElementById("middleName").value,
+        surname: document.getElementById("surname").value,
+        bloodType: document.getElementById("bloodType").value,
+        rhFactor: document.getElementById("rhFactor").value,
+        birthday: document.getElementById("birthday").value,
+        contact: document.getElementById("contact").value,
+        serials: serials
+    };
 
-          let donorData = {
-              firstName: document.getElementById("firstName").value,
-              middleName: document.getElementById("middleName").value,
-              surname: document.getElementById("surname").value,
-              bloodType: document.getElementById("bloodType").value,
-              rhFactor: document.getElementById("rhFactor").value,
-              birthday: document.getElementById("birthday").value,
-              contact: document.getElementById("contact").value,
-              serials: serials
-          };
+    try {
+        const snapshot = await database.ref('donors').get();
+        let donors = snapshot.exists() ? snapshot.val() : [];
+        let editIndex = localStorage.getItem("editIndex");
 
-          // Duplicate check
-          let duplicate = donors.find((d, idx) => idx != editIndex && d.firstName === donorData.firstName && d.surname === donorData.surname && d.contact === donorData.contact);
-          if(duplicate){ alert("Duplicate donor detected!"); return; }
+        // Duplicate check
+        if(donors.some((d, idx) => idx != editIndex && d.firstName===donorData.firstName && d.surname===donorData.surname && d.contact===donorData.contact)){
+            alert("Duplicate donor detected!"); return;
+        }
 
-          if(editIndex !== null){
-              donors[editIndex] = donorData;
-              localStorage.removeItem("editIndex");
-          } else {
-              donors.push(donorData);
-          }
+        if(editIndex !== null){
+            donors[editIndex] = donorData;
+            localStorage.removeItem("editIndex");
+        } else {
+            donors.push(donorData);
+        }
 
-          await database.ref('donors').set(donors);
-          window.location.href = "tracking.html";
-      } catch(e){ console.error(e); }
-  }
+        await database.ref('donors').set(donors);
+        alert("Donor saved successfully!");
+        window.location.href = "tracking.html";
+    } catch(e){ console.error(e); alert("Error saving donor."); }
+}
 
-  window.onload = async function(){
-      let editIndex = localStorage.getItem("editIndex");
-      if(editIndex !== null){
-          try {
-              const snapshot = await database.ref('donors').get();
-              let donors = snapshot.exists() ? snapshot.val() : [];
-              let donor = donors[editIndex];
-              document.getElementById("firstName").value = donor.firstName;
-              document.getElementById("middleName").value = donor.middleName;
-              document.getElementById("surname").value = donor.surname;
-              document.getElementById("bloodType").value = donor.bloodType;
-              document.getElementById("rhFactor").value = donor.rhFactor;
-              document.getElementById("birthday").value = donor.birthday;
-              document.getElementById("contact").value = donor.contact;
-              serials = donor.serials || [];
-              renderSerials();
-          } catch(e){ console.error(e); }
-      }
-  }
+window.onload = async function(){
+    let editIndex = localStorage.getItem("editIndex");
+    if(editIndex !== null){
+        try {
+            const snapshot = await database.ref('donors').get();
+            let donors = snapshot.exists() ? snapshot.val() : [];
+            let donor = donors[editIndex];
+            document.getElementById("firstName").value = donor.firstName;
+            document.getElementById("middleName").value = donor.middleName;
+            document.getElementById("surname").value = donor.surname;
+            document.getElementById("bloodType").value = donor.bloodType;
+            document.getElementById("rhFactor").value = donor.rhFactor;
+            document.getElementById("birthday").value = donor.birthday;
+            document.getElementById("contact").value = donor.contact;
+            serials = donor.serials || [];
+            renderSerials();
+        } catch(e){ console.error(e); }
+    }
+}
 </script>
 
 </body>
