--- a/tracking.html
+++ b/tracking.html
@@ -3,7 +3,6 @@
 <head>
     <title>Galloners Club - Tracking</title>
     <meta charset="UTF-8">
-
     <style>
         body { margin:0; font-family:Arial; background:#f4f4f4; }
         header { background:#b30000; color:white; padding:15px; text-align:center; }
@@ -40,7 +39,6 @@
         .serial-item input { padding:4px; margin-right:5px; }
     </style>
 </head>
-
 <body>
 
 <header>
@@ -50,9 +48,10 @@
 
 <div class="container">
 
-<input type="text" id="searchInput" placeholder="Search donor..." onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
+<input type="text" id="searchInput" placeholder="Search donor..."
+onkeyup="searchDonor()" style="margin-bottom:10px; padding:5px;">
 
-<button class="top-btn" onclick="exportToGoogleSheet()">Export CSV</button>
+<button class="top-btn" onclick="exportToCSV()">Export CSV</button>
 <button class="top-btn" onclick="goDashboard()">Return to Dashboard</button>
 
 <br><br>
@@ -108,31 +107,123 @@ const firebaseConfig = {
 firebase.initializeApp(firebaseConfig);
 const database = firebase.database();
 
-/* ================== ALL ORIGINAL FUNCTIONS INTACT ================== */
+let donorData = []; // cached donors
+let categoryLimits = { galloner:8, bronze:28, silver:46, gold:70 };
 
 async function getDonors(){
     try {
         const snapshot = await database.ref('donors').get();
-        return snapshot.exists() ? snapshot.val() : [];
+        donorData = snapshot.exists() ? snapshot.val() : [];
+        return donorData;
     } catch(e){ console.error(e); return []; }
 }
 
-function goDashboard(){ window.location.href="dashboard.html"; }
+async function renderTable(category=null){
+    let donors = await getDonors();
+    let table = document.getElementById("donorTable");
+    let selectedBloodType = document.getElementById("bloodFilter").value;
+    table.innerHTML = "";
 
-function exportToGoogleSheet(){
-    getDonors().then(donors => {
-        let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
-        donors.forEach(d=>{
-            csv += `${d.bloodType || ""},${d.rhFactor || ""},${d.firstName || ""},${d.middleName || ""},${d.surname || ""},${d.birthday || ""},${d.contact || ""}\n`;
-        });
-        let blob = new Blob([csv], { type: "text/csv" });
-        let url = window.URL.createObjectURL(blob);
-        let a = document.createElement("a");
-        a.href = url;
-        a.download = "donors.csv";
-        a.click();
-        window.URL.revokeObjectURL(url);
+    if(donors.length === 0){ table.innerHTML = `<tr><td colspan="6">No donors found</td></tr>`; return; }
+
+    donors.forEach((donor,index)=>{
+        let serialCount = donor.serials ? donor.serials.length : 0;
+        if(selectedBloodType && donor.bloodType !== selectedBloodType) return;
+
+        if(category){
+            if(category==="galloner" && serialCount < categoryLimits.galloner) return;
+            if(category==="bronze" && serialCount < categoryLimits.bronze) return;
+            if(category==="silver" && serialCount < categoryLimits.silver) return;
+            if(category==="gold" && serialCount < categoryLimits.gold) return;
+        }
+
+        table.innerHTML += `
+        <tr>
+            <td>${index+1}</td>
+            <td>${donor.firstName || ""} ${donor.middleName || ""} ${donor.surname || ""}</td>
+            <td>${donor.bloodType || ""} ${donor.rhFactor || ""}</td>
+            <td>${donor.contact || ""}</td>
+            <td>
+                ${serialCount}
+                <button class="view-btn" onclick="toggleSerial(${index})">View</button>
+            </td>
+            <td>
+                <button class="edit-btn" onclick="editDonor(${index})">Edit</button>
+                <button class="delete-btn" onclick="deleteDonor(${index})">Delete</button>
+            </td>
+        </tr>
+        <tr id="serialRow${index}" style="display:none;">
+            <td colspan="6">
+                <div class="serial-box" id="serialList${index}"></div>
+            </td>
+        </tr>
+        `;
     });
 }
 
-/* All your original rendering, view, edit, delete, filter, and search logic remains unchanged */
+function goDashboard(){ window.location.href = "dashboard.html"; }
+
+function filterByCategory(type){ renderTable(type); }
+
+function searchDonor(){
+    let input = document.getElementById("searchInput").value.toLowerCase();
+    document.querySelectorAll("#donorTable tr").forEach(row=>{
+        row.style.display = row.innerText.toLowerCase().includes(input) ? "" : "none";
+    });
+}
+
+async function toggleSerial(index){
+    let donors = await getDonors();
+    let row = document.getElementById("serialRow"+index);
+    let container = document.getElementById("serialList"+index);
+
+    if(row.style.display==="none"){
+        container.innerHTML="";
+        let serials = donors[index].serials || [];
+        serials.forEach((s,i)=>{
+            container.innerHTML += `
+                <div class="serial-item">
+                    <div>
+                        <input type="text" value="${s.serial}" disabled>
+                        <input type="date" value="${s.date}" disabled>
+                    </div>
+                </div>`;
+        });
+        row.style.display="table-row";
+    } else { row.style.display="none"; }
+}
+
+function editDonor(index){
+    localStorage.setItem("editIndex", index);
+    window.location.href="donor-entry.html";
+}
+
+async function deleteDonor(index){
+    if(!confirm("Are you sure you want to delete this donor?")) return;
+    let donors = await getDonors();
+    donors.splice(index,1);
+    await database.ref('donors').set(donors);
+    renderTable();
+}
+
+async function exportToCSV(){
+    let donors = await getDonors();
+    let csv = "Blood Type,Rh Factor,First Name,Middle Name,Surname,Birthday,Contact\n";
+    donors.forEach(d=>{
+        csv += `${d.bloodType || ""},${d.rhFactor || ""},${d.firstName || ""},${d.middleName || ""},${d.surname || ""},${d.birthday || ""},${d.contact || ""}\n`;
+    });
+    let blob = new Blob([csv], { type: "text/csv" });
+    let url = window.URL.createObjectURL(blob);
+    let a = document.createElement("a");
+    a.href = url;
+    a.download = "donors.csv";
+    a.click();
+    window.URL.revokeObjectURL(url);
+}
+
+window.onload = function(){ renderTable(); }
+
+</script>
+
+</body>
+</html>
