--- a/donor-entry.html
+++ b/donor-entry.html
@@ -124,22 +124,21 @@ async function saveDonor(){
     let donor = { firstName, middleName, surname, bloodType, rhFactor, birthday, contact, serials };
 
     // Check for duplicates
-    const snapshot = await database.ref('donors').get();
-    let donors = snapshot.exists() ? snapshot.val() : [];
-    let duplicate = donors.find(d => d.firstName===firstName && d.middleName===middleName && d.surname===surname && d.bloodType===bloodType && d.rhFactor===rhFactor);
-    if(duplicate){
-        if(!confirm("Donor with same data exists. Add anyway?")) return;
+    const snapshot = await database.ref('donors').orderByChild('fullName').equalTo(firstName+" "+middleName+" "+surname).get();
+    if(snapshot.exists()){
+        if(!confirm("Donor with same name exists. Add anyway?")) return;
     }
 
+    // Generate unique key for new donor
     let editIndex = localStorage.getItem("editIndex");
     if(editIndex !== null){
-        donors[editIndex] = donor;
+        await database.ref('donors/'+editIndex).set(donor);
         localStorage.removeItem("editIndex");
     } else {
-        donors.push(donor);
+        const newRef = database.ref('donors').push();
+        await newRef.set(donor);
     }
 
-    await database.ref('donors').set(donors);
     alert("Donor saved successfully!");
     window.location.href = "tracking.html";
 }
@@ -147,21 +146,20 @@ async function saveDonor(){
 window.onload = async function(){
     let editIndex = localStorage.getItem("editIndex");
     if(editIndex !== null){
-        const snapshot = await database.ref('donors').get();
-        let donors = snapshot.exists() ? snapshot.val() : [];
-        let donor = donors[editIndex];
-        if(!donor) return;
-
-        document.getElementById("firstName").value = donor.firstName;
-        document.getElementById("middleName").value = donor.middleName;
-        document.getElementById("surname").value = donor.surname;
-        document.getElementById("bloodType").value = donor.bloodType;
-        document.getElementById("rhFactor").value = donor.rhFactor;
-        document.getElementById("birthday").value = donor.birthday;
-        document.getElementById("contact").value = donor.contact;
-
-        serials = donor.serials || [];
-        renderSerials();
+        const donorRef = database.ref('donors/'+editIndex);
+        donorRef.get().then(snapshot=>{
+            if(!snapshot.exists()) return;
+            const donor = snapshot.val();
+            document.getElementById("firstName").value = donor.firstName;
+            document.getElementById("middleName").value = donor.middleName;
+            document.getElementById("surname").value = donor.surname;
+            document.getElementById("bloodType").value = donor.bloodType;
+            document.getElementById("rhFactor").value = donor.rhFactor;
+            document.getElementById("birthday").value = donor.birthday;
+            document.getElementById("contact").value = donor.contact;
+            serials = donor.serials || [];
+            renderSerials();
+        });
     }
 }
 </script>
